tests/error/effects_errors/return_pure_callable.err
Error: Type mismatch (at $FILE:12:10)
   | 
10 | @guppy
11 | def main() -> Callable[[int], int]:
12 |    return pure_func
   |           ^^^^^^^^^ Expected return value of type `int -> int`, got `int -[]->
   |                     int`

Guppy compilation failed due to 1 previous error
